fix header spacing, add more to about me with <ul>  and <ol>!

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,17 @@ body {
   width:40%;
 }
 
+.blue {
+  color:blue;
+}
+
+.white {
+  color:white;
+}
+
+.purple {
+  color:purple;
+}
 .captionedImage {
   display:flex;
   flex-direction: column;
